tests/baselines/reference/transpile/Generates expected syntactic diagnostics.errors.txt
file.ts(1,1): error TS1433: Unexpected keyword or identifier.


==== file.ts (1 errors) ====
    a b
    ~
!!! error TS1433: Unexpected keyword or identifier.